--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -26,7 +26,21 @@ services:
     depends_on:
       - db
     networks:
-      - app-network 
+      - app-network
+
+  frontend:
+    build: .
+    command: tail -f /dev/null
+    volumes:
+      - frontend_data:/var/lib/frontend/data
+    ports:
+      - "8080:8080"
+    environment:
+       DJANGO_SETTINGS_MODULE: ft_transcendence_frontend.settings
+    depends_on:
+      - backend
+    networks:
+      - app-network  
 
   grafana:
     build: ../monitoring/graphana/
@@ -59,7 +73,8 @@ services:
 volumes:
   grafana_data:
   postgres_data:
-  prometheus_data: 
+  prometheus_data:
+  frontend_data: 
 
 networks:
   app-network: 
