First frontend branch commit

--- a/real_server/ft_transcendece_frontend/Dockerfile
+++ b/real_server/ft_transcendece_frontend/Dockerfile
@@ -20,4 +20,4 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 
 COPY . .
 
-#CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
+CMD ["python", "manage.py", "runserver", "0.0.0.0:8080"]
