--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -16,7 +16,7 @@ services:
 
   backend:
     build: .
-    command: "python manage.py runserver 0.0.0.0:8000"
+    command: tail -f /dev/null
     volumes:
       - .:/app
     ports:
