--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -9,6 +9,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 RUN pip install djangorestframework
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
+	postgresql-client \
     libpq-dev \
     gcc \
     python3-dev \
