--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -1,5 +1,3 @@
-version: '3.8'
-
 services:
   db:
     image: postgres:15-alpine
@@ -16,7 +14,14 @@ services:
 
   backend:
     build: .
-    command: "python manage.py runserver 0.0.0.0:8000"
+    command: >
+      sh -c "
+        until pg_isready -h db -p 5432; do
+          echo 'Esperando a que la base de datos esté lista...';
+          sleep 1;
+        done &&
+        python manage.py migrate &&
+        python manage.py runserver 0.0.0.0:8000"
     volumes:
       - .:/app
     ports:
