Actualización de: real_server/Dockerfile real_server/api/__pycache__/__init__.cpython-311.pyc real_server/api/__pycache__/admin.cpython-311.pyc real_server/api/__pycache__/apps.cpython-311.pyc real_server/api/__pycache__/models.cpython-311.pyc real_server/api/__pycache__/serializers.cpython-311.pyc real_server/api/__pycache__/urls.cpython-311.pyc real_server/api/__pycache__/views.cpython-311.pyc real_server/api/migrations/__pycache__/0001_initial.cpython-311.pyc real_server/api/migrations/__pycache__/__init__.cpython-311.pyc real_server/docker-compose.yml real_server/ft_transcendece_frontend/Dockerfile real_server/ft_transcendence_backend/__pycache__/__init__.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/settings.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/urls.cpython-311.pyc real_server/ft_transcendence_backend/__pycache__/wsgi.cpython-311.pyc real_server/pages/__pycache__/__init__.cpython-311.pyc real_server/pages/__pycache__/forms.cpython-311.pyc real_server/pages/__pycache__/views.cpython-311.pyc  [10/04/2025 18:19]

--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -14,6 +14,7 @@ RUN pip install django-crispy-forms
 RUN apt-get update && apt-get install -y --no-install-recommends \
     libpq-dev \
     gcc \
+	postgresql-client \
     python3-dev \
     nano \
 	curl \
