--- a/real_server/makefile
+++ b/real_server/makefile
@@ -17,5 +17,7 @@ clean:
 	docker volume rm $$(docker volume ls -q) || true;\
 	docker network rm $$(docker network ls -q) || true;\
 	docker system prune -f --volumes
+	find . -name "__pycache__" -type d -exec rm -r {} +\
+	find . -name "*.pyc" -delete 
 
 .PHONY: all re down clean
