--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -40,7 +40,8 @@ services:
     ports:
       - "8000:8000"
     environment:
-       DJANGO_SETTINGS_MODULE: ft_transcendence_backend.settings
+      - DJANGO_SETTINGS_MODULE=ft_transcendence_backend.settings
+      - DATABASE_URL=postgres://user:password@db:5432/dbname
     depends_on:
       - db
     networks:
