--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -58,6 +58,7 @@ services:
     environment:
       - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_PATHS_PROVISIONING=/etc/grafana/provisioning
     networks:
       - app-network 
 
