--- a/real_server/monitoring/prometheus/prometheus.yml
+++ b/real_server/monitoring/prometheus/prometheus.yml
@@ -7,7 +7,8 @@ scrape_configs:
     static_configs:
       - targets: ['backend:8000']
     metrics_path: '/metrics'
-
+    scheme: http
+    
   - job_name: 'postgres'
     static_configs:
       - targets: ['postgres_exporter:9187']
