--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -9,6 +9,8 @@ RUN pip install djangorestframework django-crispy-forms django-prometheus
 
 RUN pip install django-crispy-forms
 
+RUN pip install python-json-logger
+
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 	postgresql-client \
