Actualización de: real_server/Dockerfile real_server/docker-compose.yml real_server/ft_transcendence_backend/es_client.py  [29/04/2025 14:03]

--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -11,6 +11,8 @@ RUN pip install django-crispy-forms
 
 RUN pip install python-json-logger
 
+RUN pip install elasticsearch
+
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 	postgresql-client \
