--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -73,12 +73,9 @@ services:
       - app-network
   
   elasticsearch:
-    image: docker.elastic.co/elasticsearch/elasticsearch:8.12.0
-    container_name: elasticsearch
+    build: ../monitoring/elasticsearch/
     environment:
       - discovery.type=single-node
-      - xpack.security.enabled=false
-      - ES_JAVA_OPTS=-Xms512m -Xmx512m
     ports:
       - "9200:9200"
     networks:
