--- a/real_server/logstash.conf
+++ b/real_server/logstash.conf
@@ -7,8 +7,11 @@ input {
 
 output {
   elasticsearch {
-    hosts => ["http://elasticsearch:9200"]
-    index => "django-logs-%{+YYYY.MM.dd}"
+    hosts => ["https://elasticsearch:9200"]
+    user => "elastic"
+    password => "changeme"
+    ssl => true
+    cacert => "/usr/share/logstash/config/certs/elastic.crt"
   }
   stdout { codec => rubydebug }
 }
