--- a/real_server/docker-compose.yml
+++ b/real_server/docker-compose.yml
@@ -76,10 +76,17 @@ services:
     build: ../monitoring/elasticsearch/
     environment:
       - discovery.type=single-node
+      - xpack.security.enabled=true
+      - xpack.security.http.ssl.enabled=true
+      - xpack.security.http.ssl.key=certs/elastic.key
+      - xpack.security.http.ssl.certificate=certs/elastic.crt
+      - xpack.security.http.ssl.certificate_authorities=certs/elastic.crt
     ports:
       - "9200:9200"
     networks:
       - app-network
+    volumes:
+      - ./certs:/usr/share/elasticsearch/config/certs
 
   logstash:
     image: docker.elastic.co/logstash/logstash:8.13.4
@@ -90,6 +97,7 @@ services:
       - "5044:5044"
     volumes:
       - ./logstash/logstash.conf:/usr/share/logstash/pipeline/logstash.conf
+      - ./certs:/usr/share/logstash/config/certs
     depends_on:
       - elasticsearch
     networks:
@@ -100,9 +108,17 @@ services:
     image: docker.elastic.co/kibana/kibana:8.12.0
     container_name: kibana
     environment:
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+        - SERVER_SSL_ENABLED=true
+        - SERVER_SSL_CERTIFICATE=/usr/share/kibana/config/certs/elastic.crt
+        - SERVER_SSL_KEY=/usr/share/kibana/config/certs/elastic.key
+        - ELASTICSEARCH_HOSTS=["https://elasticsearch:9200"]
+        - ELASTICSEARCH_SSL_CERTIFICATEAUTHORITIES=/usr/share/kibana/config/certs/elastic.crt
+        - ELASTICSEARCH_USERNAME=elastic
+        - ELASTICSEARCH_PASSWORD=changeme
     ports:
       - "5601:5601"
+    volumes:
+      - ./certs:/usr/share/kibana/config/certs
     networks:
       - app-network
     depends_on:
