--- a/real_server/Dockerfile
+++ b/real_server/Dockerfile
@@ -11,17 +11,22 @@ RUN pip install django-crispy-forms
 
 RUN pip install python-json-logger
 
+RUN pip install elasticsearch
+
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
 	postgresql-client \
     libpq-dev \
     gcc \
     postgresql-client \
+    postgresql-client \
     python3-dev \
     nano \
+    curl \
     curl \
     && rm -rf /var/lib/apt/lists/*
 
 COPY . .
 
+CMD ["sh", "-c", "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
 CMD ["sh", "-c", "python manage.py collectstatic --noinput && python manage.py runserver 0.0.0.0:8000"]
