--- a/real_server/makefile
+++ b/real_server/makefile
@@ -1,12 +1,14 @@
 all:
 	@chmod +x setup_monitoring.sh
 	@bash setup_monitoring.sh
+	@chmod +x setup_certs.sh
+	@bash setup_certs.sh
 	@docker-compose up --build -d
 
 down:
 	@docker-compose down
 
-re:
+re: clean
 	@docker-compose down && docker-compose up --build -d
 
 run:
